# polymarket-pgsql

./: README.md  arb_signals_last_15.0h_20251216-014600-UTC.csv  asset_price_latest_20251216-014600-UTC.csv  env copy.example  paper_pnl_20251216-014600-UTC.csv  pyproject.toml  requirements.txt
docs/: polymarket-price-data-13-12-2025-15-12-2025-1765759523634.csv  polymarket数据结构.md  prd.md  今日目标 copy.md  今日目标.md
scripts/: analyze_csv_arb.py  export_pg_to_csv.py  find_gmp_arb_from_yes_prices_csv.py  gamma_smoke_test.py  venv.sh  ws_gmp_arb_paper_trade.py
sql/: schema.sql
src/polymarket_pgsql/: clob_ws.py  config.py  gamma_client.py  pg_writer.py
