[project]
name = "polymarket-pgsql"
version = "0.1.0"
requires-python = ">=3.11"
description = "Polymarket Gamma/CLOB data ingestion to Postgres + paper trading research tooling."
readme = "README.md"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]


